# OpsContainers

./: .zshrc  Dockerfile  Makefile  README.md  features.yml  pyproject.toml
devcontainer_manager/: __init__.py  automation.py  cli.py  config.py  core.py  features.py  profiles.py
